[package]
name = "ggez-dungeon"
version = "0.1.0"
authors = ["Rafael Delboni <rafadelboni@gmail.com>"]
build = "build.rs"

[build-dependencies]
spritesheet-generator = "0.4"

[dependencies]
ggez = { version = "0.4", features = ["cargo-resource-root"] }
ggez-goodies = "0.1"
hibitset = "0.5"
nalgebra = "0.16"
ncollide2d = "0.17"
nphysics2d = "0.9"
specs = "0.12"
spritesheet-generator = "0.4"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.31"
