[package]
name = "spritesheet"
version = "0.1.0"
authors = ["Rafael Delboni <rafadelboni@gmail.com>"]

[features]
gif_codec = ["image/gif_codec"]
ico = ["image/ico"]
jpeg = ["image/jpeg"]
png_codec = ["image/png_codec"]
pnm = ["image/pnm"]
tga = ["image/tga"]
tiff = ["image/tiff"]
webp = ["image/webp"]
bmp = ["image/bmp"]
hdr = ["image/hdr"]

[dependencies]
serde = "1.0.68"
serde_derive = "1.0.68"
serde_json = "1.0.22"
lazy_static = "1.0"
regex = "1.0.1"
texture_packer = "0.14.0"
image = { version = "0.19.0", default-features = false }
